# ax-toolkit

./: LICENSE.txt  README.md  VERSION  ax-get.sh  ax-invconv.py
.github/: dependabot.yml
.github/workflows/: black.yml
get/: .gitignore  README.rst  ax-get.py  posix_compat.py  pyproject.toml  requirements.txt  tmp_name.py
invconv/: .gitignore  README.rst  __init__.py  ax-invconv.py  builtin_types.py  cell_pos.py  common.py  default.axm  demo.ini  exceptions.py  ftype.py  ini.py  logic.py  logic_func.py  logic_utils.py  msg_handler.py  pyproject.toml  requirements.txt  xlsx.py
invconv/axm/: __init__.py  command.py  common.py  exceptions.py  operator.py  output.py  parser.py  scheduler.py  struct.py  utils.py
invconv/modules/: __init__.py  axm_parser.py  cell_loc.py  common.py  invconv_ini.py  invconv_logic.py  msg_handler.py  panic_handler.py
invconv/test/: .gitignore  002-script_workout.csv  002-script_workout.xlsx  003-blank_cols.csv  003-blank_cols.xlsx  004-emoji_galore.csv  004-emoji_galore.xlsx  005-multiline.csv  005-multiline.xlsx  README.rst  expected.csv  test.xlsx
