[tool.poetry]
name = "ax-get"
version = "0.6.1"
description = "Grabs a copy of Axelor ERP source code and binaries."
authors = ["Richard J. <techpowerawaits@outlook.com>"]
license = "0BSD"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
