[tool.poetry]
name = "ax-invconv"
version = "0.6.0"
description = "Converts an input file to an Axelor-supported CSV file."
authors = ["Richard J. <techpowerawaits@outlook.com>"]
license = "0BSD"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.7"
loguru = "^0.5.3"
alive-progress = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
